# krypto-killer1.0.1

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  pyproject.toml
src/core/: db.py  logging.py
src/exchanges/base/: service.py
src/exchanges/binance/: service.py
src/exchanges/bitfinex/: service.py
src/exchanges/bitget/: service.py
src/exchanges/bybit/: service.py
src/exchanges/coinbase/: service.py
src/exchanges/exmo/: service.py
src/exchanges/gate/: service.py
src/exchanges/huobi/: service.py
src/exchanges/kraken/: service.py
src/exchanges/kucoin/: service.py
src/exchanges/mexc/: service.py
src/exchanges/okx/: service.py
src/get_spread/: spread.py
src/models/: ticker_stat.py
src/repositories/: base.py
src/telegram_bot/: bot.py
src/utils/: constants.py  exceptions.py  main.py
